# MeetupAPI/docs/api.yaml
@@ -150,7 +150,9 @@ paths:
       parameters:
         - name: SearchPhrase
           in: query
+          required: true
           schema:
+            minLength: 1
             type: string
         - name: PageSize
           in: query
@@ -160,12 +162,14 @@ paths:
         - name: PageNumber
           in: query
           schema:
+            minimum: 1
             type: integer
             format: int32
         - name: SortBy
           in: query
           schema:
             type: string
+            nullable: true
         - name: SortDirection
           in: query
           schema:
@@ -343,6 +347,27 @@ components:
           format: date-time
         isPrivate:
           type: boolean
+      additionalProperties: false
+    MeetupQuery:
+      required:
+        - searchPhrase
+      type: object
+      properties:
+        searchPhrase:
+          minLength: 1
+          type: string
+        pageSize:
+          type: integer
+          format: int32
+        pageNumber:
+          minimum: 1
+          type: integer
+          format: int32
+        sortBy:
+          type: string
+          nullable: true
+        sortDirection:
+          $ref: '#/components/schemas/SortDirection'
       additionalProperties: false
     RegisterUserDto:
       type: object
